# AortaSegmentationSlicer

./: AortaSegmentation.json  CMakeLists.txt  LICENSE  NOTICE  README.md
AortaSegmentation/: CMakeLists.txt
AortaSegmentation/AortaSegmentation/: AortaSegmentation.py  CMakeLists.txt
AortaSegmentation/AortaSegmentation/Resources/UI/: AortaSegmentation.ui
AortaSegmentation/AortaSegmentation/Resources/nnUNetCustomCode/: nnUNetTrainerAorta.py  topology_losses.py
AortaSegmentation/AortaSegmentation/Scripts/: _process_case_worker.py  extracting_metrics.py  run_inference.py  test_vmtk_centerline.py
AortaSegmentation/Resources/nnUNetCustomCode/: nnUNetTrainerAorta.py
AortaSegmentation/Scripts/: run_inference.py
